fix: place tl-rail in grid column 2 and set connector line height to 2px to prevent layout misalignment and subpixel vanishing in firefox

--- a/src/styles/timeline.css
+++ b/src/styles/timeline.css
@@ -15,9 +15,12 @@
   }
 
   .tl-rail {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
+    grid-column: 2;
+    grid-row: 1 / span 100;
+    justify-self: center;
+    position: relative;
+    left: auto;
+    transform: none;
     top: 0;
     bottom: 0;
     width: 2px;
@@ -49,10 +52,10 @@
   .tl-item.tl-left::after {
     content: '';
     position: absolute;
-    right: -54px;
-    top: calc(1.8rem + 5px);
-    width: 54px;
-    height: 1px;
+    right: -55px;
+    top: calc(1.8rem + 4.5px);
+    width: 55px;
+    height: 2px; /* 2px prevents subpixel rounding down to 0 in Firefox */
     background: var(--p1);
     opacity: 0.4;
     z-index: 1;
@@ -75,10 +78,10 @@
   .tl-item.tl-right::after {
     content: '';
     position: absolute;
-    left: -54px;
-    top: calc(1.8rem + 5px);
-    width: 54px;
-    height: 1px;
+    left: -55px;
+    top: calc(1.8rem + 4.5px);
+    width: 55px;
+    height: 2px; /* 2px prevents subpixel rounding down to 0 in Firefox */
     background: var(--p1);
     opacity: 0.4;
     z-index: 1;
